compiler project/antlr_tools/C_GrammarParser.py
# Generated from C_Grammar.g4 by ANTLR 4.11.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
from typing import TextIO

# if sys.version_info[1] > 5:
# 	from typing import TextIO
# else:
# 	from typing.io import TextIO


class C_GrammarParser ( Parser ):

    grammarFileName = "C_Grammar.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'float'", "'int'", "'char'", "'#include <stdio.h>'", 
                     "'void'", "'while'", "'for'", "'if'", "'else'", "'return'", 
                     "'=='", "'!='", "'>'", "'<'", "'>='", "'<='", "'+'", 
                     "'-'", "'*'", "'/'", "'='", "'('", "')'", "'['", "']'", 
                     "'{'", "'}'", "';'", "'->'", "'''", "'\"'", "','", 
                     "'&'", "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "'printf'" ]

    symbolicNames = [ "<INVALID>", "K_FLOAT", "K_INT", "K_CHAR", "INCLUDE", 
                      "VOID", "WHILE", "FOR", "IF", "ELSE", "RETURN", "EQ", 
                      "NEQ", "GT", "LT", "GE", "LE", "PLUS", "MIN", "MULT", 
                      "DIV", "ASS", "LPAREN", "RPAREN", "LBRACK", "RBRACK", 
                      "LCURL", "RCURL", "EOS", "ARROW", "S_QUOTE", "D_QUOTE", 
                      "COMMA", "AMP", "STRING", "CHAR_T", "INT", "FLOAT", 
                      "CHAR", "SP_CHAR", "WORD", "WS", "S_L_COMMENT", "M_L_COMMENT", 
                      "PRINTF" ]

    RULE_start = 0
    RULE_global_var = 1
    RULE_function = 2
    RULE_codeblock = 3
    RULE_ifStat = 4
    RULE_whileStat = 5
    RULE_forStat = 6
    RULE_statement = 7
    RULE_assignment = 8
    RULE_basicAss = 9
    RULE_arrayDeclAss = 10
    RULE_arr_decl = 11
    RULE_left_expr = 12
    RULE_right_expr = 13
    RULE_all_right = 14
    RULE_compExpr = 15
    RULE_both_expr = 16
    RULE_factor = 17
    RULE_term = 18
    RULE_arithmetic = 19
    RULE_compare = 20
    RULE_types = 21
    RULE_type_name = 22
    RULE_identifier = 23
    RULE_comment = 24

    ruleNames =  [ "start", "global_var", "function", "codeblock", "ifStat", 
                   "whileStat", "forStat", "statement", "assignment", "basicAss", 
                   "arrayDeclAss", "arr_decl", "left_expr", "right_expr", 
                   "all_right", "compExpr", "both_expr", "factor", "term", 
                   "arithmetic", "compare", "types", "type_name", "identifier", 
                   "comment" ]

    EOF = Token.EOF
    K_FLOAT=1
    K_INT=2
    K_CHAR=3
    INCLUDE=4
    VOID=5
    WHILE=6
    FOR=7
    IF=8
    ELSE=9
    RETURN=10
    EQ=11
    NEQ=12
    GT=13
    LT=14
    GE=15
    LE=16
    PLUS=17
    MIN=18
    MULT=19
    DIV=20
    ASS=21
    LPAREN=22
    RPAREN=23
    LBRACK=24
    RBRACK=25
    LCURL=26
    RCURL=27
    EOS=28
    ARROW=29
    S_QUOTE=30
    D_QUOTE=31
    COMMA=32
    AMP=33
    STRING=34
    CHAR_T=35
    INT=36
    FLOAT=37
    CHAR=38
    SP_CHAR=39
    WORD=40
    WS=41
    S_L_COMMENT=42
    M_L_COMMENT=43
    PRINTF=44

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.11.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class StartContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(C_GrammarParser.EOF, 0)

        def INCLUDE(self):
            return self.getToken(C_GrammarParser.INCLUDE, 0)

        def function(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(C_GrammarParser.FunctionContext)
            else:
                return self.getTypedRuleContext(C_GrammarParser.FunctionContext,i)


        def global_var(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(C_GrammarParser.Global_varContext)
            else:
                return self.getTypedRuleContext(C_GrammarParser.Global_varContext,i)


        def arr_decl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(C_GrammarParser.Arr_declContext)
            else:
                return self.getTypedRuleContext(C_GrammarParser.Arr_declContext,i)


        def EOS(self, i:int=None):
            if i is None:
                return self.getTokens(C_GrammarParser.EOS)
            else:
                return self.getToken(C_GrammarParser.EOS, i)

        def getRuleIndex(self):
            return C_GrammarParser.RULE_start

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStart" ):
                listener.enterStart(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStart" ):
                listener.exitStart(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStart" ):
                return visitor.visitStart(self)
            else:
                return visitor.visitChildren(self)




    def start(self):

        localctx = C_GrammarParser.StartContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_start)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 51
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==4:
                self.state = 50
                self.match(C_GrammarParser.INCLUDE)


            self.state = 60
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while ((_la) & ~0x3f) == 0 and ((1 << _la) & 46) != 0:
                self.state = 58
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
                if la_ == 1:
                    self.state = 53
                    self.function()
                    pass

                elif la_ == 2:
                    self.state = 54
                    self.global_var()
                    pass

                elif la_ == 3:
                    self.state = 55
                    self.arr_decl()
                    self.state = 56
                    self.match(C_GrammarParser.EOS)
                    pass


                self.state = 62
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 63
            self.match(C_GrammarParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Global_varContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def type_name(self):
            return self.getTypedRuleContext(C_GrammarParser.Type_nameContext,0)


        def identifier(self):
            return self.getTypedRuleContext(C_GrammarParser.IdentifierContext,0)


        def EOS(self):
            return self.getToken(C_GrammarParser.EOS, 0)

        def ASS(self):
            return self.getToken(C_GrammarParser.ASS, 0)

        def types(self):
            return self.getTypedRuleContext(C_GrammarParser.TypesContext,0)


        def getRuleIndex(self):
            return C_GrammarParser.RULE_global_var

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterGlobal_var" ):
                listener.enterGlobal_var(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitGlobal_var" ):
                listener.exitGlobal_var(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitGlobal_var" ):
                return visitor.visitGlobal_var(self)
            else:
                return visitor.visitChildren(self)




    def global_var(self):

        localctx = C_GrammarParser.Global_varContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_global_var)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 65
            self.type_name()
            self.state = 66
            self.identifier()
            self.state = 69
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==21:
                self.state = 67
                self.match(C_GrammarParser.ASS)
                self.state = 68
                self.types()


            self.state = 71
            self.match(C_GrammarParser.EOS)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FunctionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def identifier(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(C_GrammarParser.IdentifierContext)
            else:
                return self.getTypedRuleContext(C_GrammarParser.IdentifierContext,i)


        def LPAREN(self):
            return self.getToken(C_GrammarParser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(C_GrammarParser.RPAREN, 0)

        def codeblock(self):
            return self.getTypedRuleContext(C_GrammarParser.CodeblockContext,0)


        def type_name(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(C_GrammarParser.Type_nameContext)
            else:
                return self.getTypedRuleContext(C_GrammarParser.Type_nameContext,i)


        def VOID(self):
            return self.getToken(C_GrammarParser.VOID, 0)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(C_GrammarParser.COMMA)
            else:
                return self.getToken(C_GrammarParser.COMMA, i)

        def getRuleIndex(self):
            return C_GrammarParser.RULE_function

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunction" ):
                listener.enterFunction(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunction" ):
                listener.exitFunction(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunction" ):
                return visitor.visitFunction(self)
            else:
                return visitor.visitChildren(self)




    def function(self):

        localctx = C_GrammarParser.FunctionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_function)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 75
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [1, 2, 3]:
                self.state = 73
                self.type_name()
                pass
            elif token in [5]:
                self.state = 74
                self.match(C_GrammarParser.VOID)
                pass
            else:
                raise NoViableAltException(self)

            self.state = 77
            self.identifier()
            self.state = 78
            self.match(C_GrammarParser.LPAREN)
            self.state = 90
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if ((_la) & ~0x3f) == 0 and ((1 << _la) & 14) != 0:
                self.state = 79
                self.type_name()
                self.state = 80
                self.identifier()
                self.state = 87
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==32:
                    self.state = 81
                    self.match(C_GrammarParser.COMMA)
                    self.state = 82
                    self.type_name()
                    self.state = 83
                    self.identifier()
                    self.state = 89
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)



            self.state = 92
            self.match(C_GrammarParser.RPAREN)
            self.state = 93
            self.codeblock()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CodeblockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return C_GrammarParser.RULE_codeblock

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class FirstCodeBlockContext(CodeblockContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a C_GrammarParser.CodeblockContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def LCURL(self):
            return self.getToken(C_GrammarParser.LCURL, 0)
        def RCURL(self):
            return self.getToken(C_GrammarParser.RCURL, 0)
        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(C_GrammarParser.StatementContext)
            else:
                return self.getTypedRuleContext(C_GrammarParser.StatementContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFirstCodeBlock" ):
                listener.enterFirstCodeBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFirstCodeBlock" ):
                listener.exitFirstCodeBlock(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFirstCodeBlock" ):
                return visitor.visitFirstCodeBlock(self)
            else:
                return visitor.visitChildren(self)


    class StEosContext(CodeblockContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a C_GrammarParser.CodeblockContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def EOS(self):
            return self.getToken(C_GrammarParser.EOS, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStEos" ):
                listener.enterStEos(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStEos" ):
                listener.exitStEos(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStEos" ):
                return visitor.visitStEos(self)
            else:
                return visitor.visitChildren(self)



    def codeblock(self):

        localctx = C_GrammarParser.CodeblockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_codeblock)
        self._la = 0 # Token type
        try:
            self.state = 104
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [26]:
                localctx = C_GrammarParser.FirstCodeBlockContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 95
                self.match(C_GrammarParser.LCURL)
                self.state = 99
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while ((_la) & ~0x3f) == 0 and ((1 << _la) & 1641018164686) != 0:
                    self.state = 96
                    self.statement()
                    self.state = 101
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 102
                self.match(C_GrammarParser.RCURL)
                pass
            elif token in [28]:
                localctx = C_GrammarParser.StEosContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 103
                self.match(C_GrammarParser.EOS)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IfStatContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IF(self):
            return self.getToken(C_GrammarParser.IF, 0)

        def LPAREN(self):
            return self.getToken(C_GrammarParser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(C_GrammarParser.RPAREN, 0)

        def codeblock(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(C_GrammarParser.CodeblockContext)
            else:
                return self.getTypedRuleContext(C_GrammarParser.CodeblockContext,i)


        def assignment(self):
            return self.getTypedRuleContext(C_GrammarParser.AssignmentContext,0)


        def all_right(self):
            return self.getTypedRuleContext(C_GrammarParser.All_rightContext,0)


        def ELSE(self):
            return self.getToken(C_GrammarParser.ELSE, 0)

        def ifStat(self):
            return self.getTypedRuleContext(C_GrammarParser.IfStatContext,0)


        def whileStat(self):
            return self.getTypedRuleContext(C_GrammarParser.WhileStatContext,0)


        def getRuleIndex(self):
            return C_GrammarParser.RULE_ifStat

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIfStat" ):
                listener.enterIfStat(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIfStat" ):
                listener.exitIfStat(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIfStat" ):
                return visitor.visitIfStat(self)
            else:
                return visitor.visitChildren(self)




    def ifStat(self):

        localctx = C_GrammarParser.IfStatContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_ifStat)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 106
            self.match(C_GrammarParser.IF)
            self.state = 107
            self.match(C_GrammarParser.LPAREN)
            self.state = 110
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
            if la_ == 1:
                self.state = 108
                self.assignment()
                pass

            elif la_ == 2:
                self.state = 109
                self.all_right()
                pass


            self.state = 112
            self.match(C_GrammarParser.RPAREN)
            self.state = 113
            self.codeblock()
            self.state = 120
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==9:
                self.state = 114
                self.match(C_GrammarParser.ELSE)
                self.state = 118
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [26, 28]:
                    self.state = 115
                    self.codeblock()
                    pass
                elif token in [8]:
                    self.state = 116
                    self.ifStat()
                    pass
                elif token in [6]:
                    self.state = 117
                    self.whileStat()
                    pass
                else:
                    raise NoViableAltException(self)



        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class WhileStatContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WHILE(self):
            return self.getToken(C_GrammarParser.WHILE, 0)

        def LPAREN(self):
            return self.getToken(C_GrammarParser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(C_GrammarParser.RPAREN, 0)

        def codeblock(self):
            return self.getTypedRuleContext(C_GrammarParser.CodeblockContext,0)


        def assignment(self):
            return self.getTypedRuleContext(C_GrammarParser.AssignmentContext,0)


        def all_right(self):
            return self.getTypedRuleContext(C_GrammarParser.All_rightContext,0)


        def getRuleIndex(self):
            return C_GrammarParser.RULE_whileStat

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWhileStat" ):
                listener.enterWhileStat(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWhileStat" ):
                listener.exitWhileStat(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWhileStat" ):
                return visitor.visitWhileStat(self)
            else:
                return visitor.visitChildren(self)




    def whileStat(self):

        localctx = C_GrammarParser.WhileStatContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_whileStat)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 122
            self.match(C_GrammarParser.WHILE)
            self.state = 123
            self.match(C_GrammarParser.LPAREN)
            self.state = 126
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,12,self._ctx)
            if la_ == 1:
                self.state = 124
                self.assignment()
                pass

            elif la_ == 2:
                self.state = 125
                self.all_right()
                pass


            self.state = 128
            self.match(C_GrammarParser.RPAREN)
            self.state = 129
            self.codeblock()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ForStatContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FOR(self):
            return self.getToken(C_GrammarParser.FOR, 0)

        def LPAREN(self):
            return self.getToken(C_GrammarParser.LPAREN, 0)

        def EOS(self, i:int=None):
            if i is None:
                return self.getTokens(C_GrammarParser.EOS)
            else:
                return self.getToken(C_GrammarParser.EOS, i)

        def compExpr(self):
            return self.getTypedRuleContext(C_GrammarParser.CompExprContext,0)


        def RPAREN(self):
            return self.getToken(C_GrammarParser.RPAREN, 0)

        def codeblock(self):
            return self.getTypedRuleContext(C_GrammarParser.CodeblockContext,0)


        def left_expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(C_GrammarParser.Left_exprContext)
            else:
                return self.getTypedRuleContext(C_GrammarParser.Left_exprContext,i)


        def assignment(self):
            return self.getTypedRuleContext(C_GrammarParser.AssignmentContext,0)


        def all_right(self):
            return self.getTypedRuleContext(C_GrammarParser.All_rightContext,0)


        def basicAss(self):
            return self.getTypedRuleContext(C_GrammarParser.BasicAssContext,0)


        def getRuleIndex(self):
            return C_GrammarParser.RULE_forStat

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterForStat" ):
                listener.enterForStat(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitForStat" ):
                listener.exitForStat(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitForStat" ):
                return visitor.visitForStat(self)
            else:
                return visitor.visitChildren(self)




    def forStat(self):

        localctx = C_GrammarParser.ForStatContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_forStat)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 131
            self.match(C_GrammarParser.FOR)
            self.state = 132
            self.match(C_GrammarParser.LPAREN)
            self.state = 135
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,13,self._ctx)
            if la_ == 1:
                self.state = 133
                self.left_expr()
                pass

            elif la_ == 2:
                self.state = 134
                self.assignment()
                pass


            self.state = 137
            self.match(C_GrammarParser.EOS)
            self.state = 138
            self.compExpr()
            self.state = 139
            self.match(C_GrammarParser.EOS)
            self.state = 143
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,14,self._ctx)
            if la_ == 1:
                self.state = 140
                self.left_expr()
                pass

            elif la_ == 2:
                self.state = 141
                self.all_right()
                pass

            elif la_ == 3:
                self.state = 142
                self.basicAss()
                pass


            self.state = 145
            self.match(C_GrammarParser.RPAREN)
            self.state = 146
            self.codeblock()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return C_GrammarParser.RULE_statement

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class WhileStContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a C_GrammarParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def whileStat(self):
            return self.getTypedRuleContext(C_GrammarParser.WhileStatContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWhileSt" ):
                listener.enterWhileSt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWhileSt" ):
                listener.exitWhileSt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWhileSt" ):
                return visitor.visitWhileSt(self)
            else:
                return visitor.visitChildren(self)


    class CodeBlockContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a C_GrammarParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def LCURL(self):
            return self.getToken(C_GrammarParser.LCURL, 0)
        def RCURL(self):
            return self.getToken(C_GrammarParser.RCURL, 0)
        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(C_GrammarParser.StatementContext)
            else:
                return self.getTypedRuleContext(C_GrammarParser.StatementContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCodeBlock" ):
                listener.enterCodeBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCodeBlock" ):
                listener.exitCodeBlock(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCodeBlock" ):
                return visitor.visitCodeBlock(self)
            else:
                return visitor.visitChildren(self)


    class EosContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a C_GrammarParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def EOS(self):
            return self.getToken(C_GrammarParser.EOS, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEos" ):
                listener.enterEos(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEos" ):
                listener.exitEos(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitEos" ):
                return visitor.visitEos(self)
            else:
                return visitor.visitChildren(self)


    class ExprContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a C_GrammarParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def EOS(self):
            return self.getToken(C_GrammarParser.EOS, 0)
        def assignment(self):
            return self.getTypedRuleContext(C_GrammarParser.AssignmentContext,0)

        def all_right(self):
            return self.getTypedRuleContext(C_GrammarParser.All_rightContext,0)

        def left_expr(self):
            return self.getTypedRuleContext(C_GrammarParser.Left_exprContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpr" ):
                listener.enterExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpr" ):
                listener.exitExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpr" ):
                return visitor.visitExpr(self)
            else:
                return visitor.visitChildren(self)


    class ForStContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a C_GrammarParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def forStat(self):
            return self.getTypedRuleContext(C_GrammarParser.ForStatContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterForSt" ):
                listener.enterForSt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitForSt" ):
                listener.exitForSt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitForSt" ):
                return visitor.visitForSt(self)
            else:
                return visitor.visitChildren(self)


    class IfContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a C_GrammarParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ifStat(self):
            return self.getTypedRuleContext(C_GrammarParser.IfStatContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIf" ):
                listener.enterIf(self)

        def exitRule(self, listener:ParseTreeListener):
